third_party/move/tools/move-decompiler/tests/compiler-v2-test/op-equal/valid0.exp
module 0x42::test {
    struct Coin has drop, key {
        _0: u256,
    }
    fun coin_inc_old_1(self: &mut Coin) {
        &mut self._0 = *&self._0 + 0u256;
    }
}

--- unable to recompile the decompiled code:
exiting with context checking errors
error: invalid assignment
  ┌─ valid0.move:6:9
  │
6 │         &mut self._0 = *&self._0 + 0u256;
  │         ^^^^^^^^^^^^ Invalid assignment syntax. Expected: a local, a field write, or a deconstructing assignment
